<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/title"
    tools:context=".AdditionActivity">

    <LinearLayout
        android:id="@+id/add_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#212020"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/add_btn_left"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/left_to_main"

            app:srcCompat="@drawable/ic_left" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/anuphan_medium"
            android:gravity="center"
            android:text="@string/addition_title"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/add_btn_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/mv_btn_more"
            android:src="@drawable/ic_more" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_container">

        <EditText
            android:id="@+id/addition_title"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:ems="10"
            android:fontFamily="@font/anuphan_medium"
            android:hint="@string/input_title"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="@color/hint_color"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.03" />

        <ScrollView
            android:id="@+id/addition_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toTopOf="@+id/btn_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addition_title">

            <EditText
                android:id="@+id/multiLineEditText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/anuphan_medium"
                android:gravity="start|top"
                android:hint="@string/text_hint"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:padding="16dp"
                android:scrollbars="vertical"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color"
                android:textSize="14sp"
                tools:ignore="VisualLintLongText,VisualLintTextFieldSize" />
        </ScrollView>


        <ImageButton
            android:id="@+id/btn_add"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/btn_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_add" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>