<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#212020"
    android:paddingTop="0dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#212020"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/anuphan_medium"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textIsSelectable="true"
            android:textSize="20sp"
            android:visibility="visible" />


        <ImageButton
            android:id="@+id/btn_left"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/m_btn_left"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_left" />

        <TextView
            android:id="@+id/main_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/anuphan_medium"
            android:gravity="center_vertical"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:visibility="gone" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/btn_new"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/im_btn_add"
            app:srcCompat="@drawable/ic_plus_white" />

        <ImageButton
            android:id="@+id/btn_filter"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/btn_filter"
            app:srcCompat="@drawable/ic_filter" />

        <ImageView
            android:id="@+id/btn_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/mv_btn_more"
            android:src="@drawable/ic_more" />

        <ImageButton
            android:id="@+id/btn_del"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/im_btn_del"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_delete" />

    </LinearLayout>

    <TextView
        android:id="@+id/no_Materials_tv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white"
        android:fontFamily="@font/anuphan_medium"
        android:gravity="center_horizontal"
        android:paddingTop="150dp"
        android:text="Нет ни одного материала"
        android:textColor="@color/secondText"
        android:textIsSelectable="true"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_container"
        tools:ignore="HardcodedText" />

<!--    <androidx.appcompat.widget.SearchView-->
<!--        android:id="@+id/main_search"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="#E2E0E0"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/main_container" />-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#E2E0E0"
        android:contentDescription="главное окно"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_container"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>