<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RepetitionActivity">

    <TextView
        android:id="@+id/repTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/anuphan_medium"
        android:text="@string/title_row_item"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <ScrollView
        android:id="@+id/repSv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.65"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repTitle">

        <TextView
            android:id="@+id/repMultiLineTextView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="?android:attr/selectableItemBackground"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:gravity="start"
            android:padding="16dp"
            android:scrollbars="vertical"
            android:text="@string/many_text"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintHeight_percent="1.0"
            tools:ignore="VisualLintLongText" />


    </ScrollView>

    <SeekBar
        android:id="@+id/repSb"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:indeterminate="false"
        android:max="10"
        android:progress="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repSv"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/repSbTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/anuphan_medium"
        android:text="0"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/repSb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repSv"
        app:layout_constraintVertical_bias="0.9"
        tools:ignore="HardcodedText" />

    <ImageButton
        android:id="@+id/repShowHide"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/rep_show_hide"
        app:layout_constraintBottom_toBottomOf="@+id/repTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/repTitle"
        app:layout_constraintTop_toTopOf="@+id/repTitle"
        app:srcCompat="@drawable/ic_eye_crossed" />

    <ImageButton
        android:id="@+id/repBtnEnd"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/btn_repeat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repSb"
        app:srcCompat="@drawable/ic_repeat" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/anuphan_medium"
        android:text="@string/rep_bar_hint"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/repBtnEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repSb" />

</androidx.constraintlayout.widget.ConstraintLayout>