<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#212020"
    android:paddingTop="0dp"
    tools:context=".IntervalsActivity">

    <LinearLayout
        android:id="@+id/inter_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#212020"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/inter_btn_left"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/left_to_main"

            app:srcCompat="@drawable/ic_left" />

        <TextView
            android:id="@+id/interTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/anuphan_medium"
            android:gravity="center"
            android:text="@string/inter_title"
            android:textColor="@color/white"
            android:textSize="20sp" />
        <ImageButton
            android:id="@+id/inter_btn_new"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/im_btn_add"
            app:srcCompat="@drawable/ic_plus_white" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/intervals_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="#E2E0E0"
        android:contentDescription="Окно с интервалами"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inter_container"
        tools:ignore="HardcodedText" />

</androidx.constraintlayout.widget.ConstraintLayout>